--- a/homeworks/01/Weeker_1.ipynb
+++ b/homeworks/01/Weeker_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +57,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO метод разворачивающий строку HE2LO -> HELLO (число означает сколько раз встречается буква)\n",
     "def transform_string(inp_string):\n",
-    "    return 0"
+    "    new_str =''\n",
+    "    global k\n",
+    "    global l\n",
+    "    l=0\n",
+    "    for i in inp_string :\n",
+    "        if (l==0):\n",
+    "            if (i!='1') and (i!='2') and (i!='3') and (i!='4') and (i!='5') and (i!='6') and (i!='7') and (i!='8') and (i!='9') and (i!='0'):\n",
+    "                new_str=new_str+i\n",
+    "            else : \n",
+    "                l=1\n",
+    "                k=int(i)\n",
+    "        else :\n",
+    "            if (i=='1') or (i=='2') or (i=='3') or (i=='4') or (i=='5') or (i=='6') or (i=='7') or (i=='8') or (i=='9') or (i=='0'):\n",
+    "                k=k*10+int(i)\n",
+    "            else :\n",
+    "                while (k>0) :\n",
+    "                    new_str=new_str+i\n",
+    "                    k=k-1\n",
+    "                l=0\n",
+    "    return new_str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +95,8 @@
     "assert transform_string(\"HI\") == \"HI\"\n",
     "assert transform_string(\"пр12ивет\") == \"приииииииииииивет\"\n",
     "assert transform_string(\"2л3у78н65тик\") == 'ллуууннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннннтттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттттик'\n",
-    "\n",
-    "#TODO Дописать 2 своих теста"
+    "assert transform_string(\"3HI\") == \"HHHI\"\n",
+    "assert transform_string(\"2F3V\") == \"FFVVV\""
    ]
   },
   {
@@ -89,24 +108,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO метод выводящий статистику по строке, кол-во гласных, согласных, цифр, строчных букв, прописных букв\n",
     "def string_stat(inp_string):\n",
-    "    return 0"
+    "    s=inp_string\n",
+    "    global k\n",
+    "    k=0\n",
+    "    k5=0\n",
+    "    k1=0\n",
+    "    k2=0\n",
+    "    k3=0\n",
+    "    k4=0\n",
+    "    for i in s :\n",
+    "        if (s[k].isdigit() == True) :\n",
+    "            k3=k3+1\n",
+    "        if (s[k].isalpha() == True) :\n",
+    "            if (s[k].islower() == True) :\n",
+    "                k4=k4+1\n",
+    "            if (s[k].isupper() == True) :\n",
+    "                k5=k5+1\n",
+    "            if (s[k]=='а') or (s[k]=='е') or (s[k]=='ё') or (s[k]=='и') or (s[k]=='о') or (s[k]=='у') or (s[k]=='ю') or(s[k]=='я') or (s[k]=='э') or(s[k]=='ы') or (s[k]=='А') or (s[k]=='Е') or (s[k]=='Ё') or (s[k]=='И') or (s[k]=='О') or (s[k]=='У') or (s[k]=='Ю') or(s[k]=='Я')or (s[k]=='Э') or(s[k]=='Ы'):\n",
+    "                k1=k1+1\n",
+    "            else :\n",
+    "                k2=k2+1\n",
+    "        k=k+1\n",
+    "    a=(k1,k2,k3,k4,k5)\n",
+    "    return a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert string_stat(\"Тевирп\") == (2, 4, 0, 5, 1)\n",
     "assert string_stat(\"КоРоВа4\") == (3, 3, 1, 3, 3)\n",
-    "\n",
+    "assert string_stat(\"муравей\") == (3, 4, 0, 7, 0)\n",
+    "assert string_stat(\"ТРи3\") == (1, 2, 1, 1, 2)\n",
     "#TODO 2 своих теста"
    ]
   },
@@ -126,13 +168,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO инвертируйте словарь из k - [v_1, v_2] в v_1 [k_1]\n",
     "def dict_inverter(input_dict):\n",
-    "    return {}"
+    "    new_dict = dict()\n",
+    "    for key in input_dict:\n",
+    "        for value in input_dict[key]:\n",
+    "            if value in new_dict:\n",
+    "                if type(new_dict[value]) == type([]):\n",
+    "                    new_dict[value].append(key)\n",
+    "                else:\n",
+    "                    new_dict[value] = [new_dict[value], key]\n",
+    "                continue\n",
+    "            new_dict[value] = key\n",
+    "    return new_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert dict_inverter({\"mango\" : [\"eatable\"], \"pillow\": [\"sleepable\"]}) == {\"eatable\": \"mango\", \"sleepable\": \"pillow\"}\n",
+    "assert dict_inverter({\"mango\" : [\"eatable\", \"readable\"]}) == {\"readable\":\"mango\", \"eatable\":\"mango\"}\n",
+    "assert dict_inverter({\"mango\" : [\"eatable\"], \"banana\": [\"eatable\"]}) == {\"eatable\": [\"mango\", \"banana\"]}\n",
+    "assert dict_inverter({\"v_1\" : [\"v_2\"], \"k_1\": [\"k_2\"]}) == {\"v_2\": \"v_1\", \"k_2\": \"k_1\"}"
    ]
   },
   {
@@ -140,13 +204,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert dict_inverter({\"mango\" : [\"eatable\"], \"pillow\": [\"sleepable\"]}) == {\"eatable\": \"mango\", \"sleepable\": \"pillow\"}\n",
-    "assert dict_inverter({\"mango\" : [\"eatable\", \"readable\"]}) == {\"readable\":\"mango\", \"eatable\":\"mango\"}\n",
-    "assert dict_inverter({\"mango\" : [\"eatable\"], \"banana\": [\"eatable\"]}) == {\"eatable\": [\"mango\", \"banana\"]}\n",
-    "\n",
-    "#TODO Один свой тест"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -157,13 +215,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO вывести уникальные элементы массива\n",
     "def uniq_array(input_arr):\n",
-    "    return []"
+    "    res=[]\n",
+    "    for i in input_arr:\n",
+    "        if i in res:\n",
+    "            res.remove(i)\n",
+    "        res.append(i)\n",
+    "    print(res)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0, 1, 2, 3]\n",
+      "['t', 'f']\n",
+      "['rt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert uniq_array([0]) == [0]\n",
+    "assert uniq_array([0, 1, 2, 3]) == [0, 1, 2, 3]\n",
+    "assert uniq_array([\"f\", \"t\", \"f\"]) == ['t', 'f']\n",
+    "assert uniq_array(['rt', 'rt']) == ['rt']"
    ]
   },
   {
@@ -171,12 +258,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert uniq_array([0]) == [0]\n",
-    "assert uniq_array([0, 1, 2, 3]) == [0, 1, 2, 3]\n",
-    "assert uniq_array([\"f\", \"t\", \"f\"]) == ['t', 'f']\n",
-    "assert uniq_array(['rt', 'rt']) == ['rt']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
