--- a/homeworks/01/HW_1.ipynb
+++ b/homeworks/01/HW_1.ipynb
@@ -6,57 +6,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class HashMap:\n",
     "    \n",
     "    class Entry:\n",
     "        def __init__(self, key, value):\n",
     "            #TODO store key and value as attributes\n",
+    "            self.key = key\n",
+    "            self.value = value\n",
     "            \n",
     "        def get_key(self):\n",
     "            #TODO return key\n",
+    "            return self.key\n",
     "            \n",
     "        def get_value(self):\n",
     "            #TODO return value\n",
+    "            return self.value\n",
     "            \n",
     "        def __eq__(self, other):\n",
     "            #TODO реализовать функцию сравнения\n",
     "            #Пояснения: self - текущий объект entry, other - какой-то другой объект\n",
     "            #Какое условие на равенство объектов в ассоциативном массиве?\n",
     "            #Если объекты равны, то метод должен возвращать True, иначе False\n",
+    "            if other.get_key() == self.key:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
     "    \n",
     "    def __init__(self, bucket_num = 64):\n",
     "        #TODO Создать массив для бакетов\n",
+    "        self.bucket_num = bucket_num\n",
+    "        self.bucket = [[] for _ in range(self.bucket_num)]\n",
     "\n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO метод get, возвращающий значение, если оно присутствует, иначе default_value\n",
+    "        indx = self._get_hash(key)\n",
+    "        if self.bucket[indx] != []:\n",
+    "            for entr in self.bucket[indx]:\n",
+    "                if entr == HashMap.Entry(key, None):\n",
+    "                    return entr.value\n",
+    "            return default_value\n",
+    "        else:\n",
+    "            return default_value\n",
     "\n",
     "    def put(self, key, value):\n",
     "        #TODO метод put, кладет значение по ключу, в случае, если ключ уже присутствует он его заменяет\n",
+    "        new_obj = self.Entry(key, value)\n",
+    "        indx = self._get_hash(new_obj.key)\n",
+    "        if self.bucket[indx] == []:\n",
+    "            self.bucket[indx].append(new_obj)\n",
+    "        else:\n",
+    "            j = 0\n",
+    "            for x in self.bucket[indx]:\n",
+    "                if new_obj == x:\n",
+    "                    del self.bucket[indx][j]\n",
+    "                    break\n",
+    "                j += 1\n",
+    "            self.bucket[indx].append(new_obj)\n",
     "\n",
     "    def __len__(self):\n",
     "        #TODO Возвращает количество Entry в массиве\n",
+    "        j = 0\n",
+    "        for i in list(itertools.chain(*self.bucket)):\n",
+    "            j += 1\n",
+    "        return j\n",
     "\n",
     "    def _get_hash(self, key):\n",
     "        #TODO Вернуть хеш от ключа, по которому он кладется в бакет\n",
+    "        self.key = key\n",
+    "        keyhash = hash(self.key)\n",
+    "        return self._get_index(keyhash)\n",
     "\n",
     "    def _get_index(self, hash_value):\n",
     "        #TODO По значению хеша вернуть индекс элемента в массиве\n",
+    "        return hash_value % self.bucket_num\n",
     "        \n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        b = []\n",
+    "        for i in list(itertools.chain(*self.bucket)):\n",
+    "            b.append(i.get_value())\n",
+    "        return itertools.chain(b)\n",
     "        \n",
     "    def keys(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор ключей (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        c = []\n",
+    "        for i in list(itertools.chain(*self.bucket)):\n",
+    "            c.append(i.get_key())\n",
+    "        return itertools.chain(c)\n",
     "        \n",
     "    def items(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Должен возвращать генератор или итератор пар ключ и значение (tuples)\n",
     "        #(на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        d = []\n",
+    "        e = []\n",
+    "        for i in list(itertools.chain(*self.bucket)):\n",
+    "            d.append(i.get_value())\n",
+    "            e.append(i.get_key())\n",
+    "        items = np.dstack((e, d))\n",
+    "        return tuple([tuple(x) for x in items[0]])\n",
     "        \n",
     "    def __str__(self):\n",
-    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать"
+    "        #TODO Метод, вызываемый при вызове print, пофантазируйте, что можно написать\n",
+    "        shapenotnone = str(sum(i != [] for i in self.bucket))\n",
+    "        return shapenotnone"
    ]
   },
   {
@@ -69,17 +134,24 @@
     "   \n",
     "    def get(self, key, default_value=None):\n",
     "        #TODO достаточно переопределить данный метод\n",
+    "        if HashMap.get(self, key) is not None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return default_value\n",
     "\n",
     "    def put(self, key, value):\n",
     "        #TODO метод put, нужно переопределить данный метод\n",
+    "        HashMap.put(self, key, value)\n",
     "\n",
     "    def __len__(self):\n",
     "        #TODO Возвращает количество Entry в массиве\n",
+    "        return HashMap.__len__(self)\n",
     "\n",
     "    def values(self):\n",
     "        #TODO Задание со звездочкой!\n",
     "        #Если делали, то нужно бы переопределить\n",
-    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)"
+    "        #Должен возвращать генератор или итератор значений (на самом деле итератор, но не принципиально, через генераторы проще ИМХО)\n",
+    "        return HashMap.keys(self)"
    ]
   }
  ],
